# Crash-MBR-w-UAC-bypassing

./: CMakeLists.txt  README.md
inc/: mbr.hpp
src/: main.cpp
